clipping border error #35007

Closed
opened 2013-04-17 11:04:46 +02:00 by S S · 3 comments

%%%--- Operating System, Graphics card ---

windows 7 64bit,GTX 650Ti
- Blender version with error, and version that worked ---

error in 2.66a, worked in version 2.64
- Short description of error ---
in the attch file, I retopo a female body. I use clipping border, but if I move the selected edge in side view, it will snap to the arm. I have tested the same file in version 2.64, it worked.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

1,I have split the 3d view window, in the right one, just press G to move the select edge, you will find the problem.

%%%

%%%--- Operating System, Graphics card --- windows 7 64bit,GTX 650Ti - Blender version with error, and version that worked --- error in 2.66a, worked in version 2.64 - Short description of error --- in the attch file, I retopo a female body. I use clipping border, but if I move the selected edge in side view, it will snap to the arm. I have tested the same file in version 2.64, it worked. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1,I have split the 3d view window, in the right one, just press G to move the select edge, you will find the problem. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r56220.%%%

%%%fixed r56220.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35007
No description provided.