source/blender/editors/sculpt_paint/sculpt.c
@@ -4102,7 +4102,7 @@ int sculpt_stroke_get_location(bContext *C, float out[3], const float mouse[2])
 	sculpt_stroke_modifiers_check(C, ob);
 
 	/* TODO: what if the segment is totally clipped? (return == 0) */
-	ED_view3d_win_to_segment_clip(vc.ar, vc.v3d, mouse, ray_start, ray_end);
+	ED_view3d_win_to_segment(vc.ar, vc.v3d, mouse, ray_start, ray_end, true);
 
 	invert_m4_m4(obimat, ob->obmat);
 	mul_m4_v3(obimat, ray_start);
